syntax = "proto3";

service Phoxi {
    rpc triggerframe (Empty) returns (Empty) {}
    rpc gettextureimg (Empty) returns (CamImg) {}
    rpc getdepthimg (Empty) returns (CamImg) {}
    rpc getpcd (Empty) returns (PointCloud) {}
    rpc getnormals (Empty) returns (PointCloud) {}
    rpc getrgbtextureimg (Empty) returns (CamImg) {}
}

message Empty {
}

message MatKW {
    // 4x4
    bytes data = 1;
}

message Pair {
    int32 data0 = 1;
    int32 data1 = 2;
}

message PointCloud {
    bytes  points = 1;
}

message CamImg {
    // could be rgb (channel=3) or depth (channel=1)
    int32  width = 1;
    int32  height = 2;
    int32  channel = 3;
    bytes  image = 4;
}